Removed deprecated methods